clusters/default/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matrix-conduit
  labels:
    app.kubernetes.io/name: matrix-conduit
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
    tier: application
