clusters/default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conduit
  namespace: matrix-conduit
  labels:
    app.kubernetes.io/name: matrix-conduit
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: matrix-conduit
  ports:
    - name: http
      port: 6167
      targetPort: 6167
