clusters/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conduit-ingress
  namespace: matrix-conduit
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: |
      kube-system-infra-security-headers@kubernetescrd
  labels:
    app.kubernetes.io/name: matrix-conduit
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
spec:
  ingressClassName: traefik
  rules:
    - host: conduit.kudofools.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conduit
                port:
                  number: 6167
